# python

./: fatiamento string e len.py
Exercicios/1 Intro/: Calculos_matematicos.py  Manipulacao_strings.py  arrays.py  if else.py  loops.py  manipulacao de strings 2.py  objetos.py  palavra_suspeita.py  pedidos.py  viajante.py
Exercicios/10-Funcoes avancadas/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
Exercicios/2 Colecoes/: armazem.py  censo-demografico.py  contagem-vogais-consoantes.py  especies.py  extrator-nomes.py  manipulacao-vendas.py  pangrama.py  teste.py
Exercicios/3 Funcoes/: cnpj.py  criar-email.py  dict-pessoas.py  fatorial.py  gestao-inventario.py  global.py  jogo_luta.py  retorno-valores.py  somar_numeros.py
Exercicios/4 Classes/: 1-carro.py  2-conta_bancaria.py  3-conta_bancaria_private.py  4-formas_geometricas.py  5-melhorar_metodo.py  6-biblioteca.py
Exercicios/6 Manipulacao de arquivos/: diretorio.py  log.txt  nonExciste.py  poema.txt  poema1.py  poema2.py  poema3.py
Exercicios/7-Tipagem/: 1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py
Exercicios/8-Bibliotecas/: 1-Matematica e estatistica.py  2- Manipulacao de arquivos e diretorios.py  3-Comprensao de dados.py  4-DateTime.py  5-Requisicoes Http.py  7- medicao de tempo.py  8- Processamento de logs.py  (+1 more)
Teoria/: 1-__init__.py
Teoria/11-Ambientes Virtuais e Poetry/meu-projeto-poetry/: main.py  pyproject.toml
Teoria/11-Ambientes Virtuais e Poetry/projeto-poesia/: main.py  pyproject.toml
Teoria/11-Ambientes Virtuais e Poetry/projeto-wikipedia/: main.py  pyproject.toml
(+154 files in other folders)
