[project]
name = "meu-projeto-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Ataide ",email = "41450845+lucasat2@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry] 
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

