[project]
name = "projeto-poesia"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Ataide ",email = "41450845+lucasat2@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

